# worldsyncc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  derby.pwn
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: examples.md  installation.md  natives.md  quickstart-houses-doors-guards.md  releases.md
examples/: worldsync_demo.pwn
include/: worldsync.inc
include/amx/: amx.h
scripts/: package-windows.ps1
src/: Cropmodule.cpp  Cropmodule.hpp  Doormodule.cpp  Doormodule.hpp  Pathmodule.cpp  Pathmodule.hpp  Vehiclemodule.cpp  Vehiclemodule.hpp  WorldSync.cpp  WorldSync.hpp  main.cpp
tests/: WorldSyncTests.cpp
